# P1---COMP1

./: .gitignore  README.md  generate.py  maior.lox  prova.py  pyproject.toml  pytest.ini  q1-regex.py  q2-regex-dfa.py
lox/: ast.py  ctx.py  grammar.lark  node.py  parser.py  runtime.py  transformer.py
lox.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
lox/aux/: __init__.py  re_validator.py
provas/prova-1/lox/: ast.py  grammar.lark  transformer.py
provas/prova-1/tests/: test_q2.py  test_q3.py  test_q5.py
provas/prova-10/: q2.dot
provas/prova-10/lox/: ast.py  grammar.lark  transformer.py
provas/prova-10/tests/: test_q2.py
provas/prova-11/: maior.lox  q2.dot
provas/prova-11/lox/: ast.py  grammar.lark  transformer.py
provas/prova-12/: q2.dot
provas/prova-12/lox/: ast.py  grammar.lark  transformer.py
provas/prova-13/lox/: ast.py  grammar.lark  transformer.py
provas/prova-13/tests/: test_q6.py
provas/prova-14/lox/: ast.py  grammar.lark  transformer.py
provas/prova-15/lox/: ast.py  grammar.lark  transformer.py
provas/prova-15/tests/: test_config.py
provas/prova-16/: q2.dot  q4-while-parse.md
provas/prova-16/lox/: ast.py  grammar.lark  (+1 more)
provas/prova-2/: q1-regex.py
provas/prova-3/: q2.dot  q3-gramatica.md  q5-while-eval.md
provas/prova-4/: fib.lox  q2.dot
provas/prova-5/: q2-regex-dfa.py
provas/prova-6/: q2.dot  q6-arquitetura.md
provas/prova-7/: q2.dot  q3-gramatica.md
provas/prova-8/: q2-regex-dfa.py  q2.dot
provas/prova-9/: q5-while-eval.md
tests/: conftest.py  test_q1.py  test_q3.py  test_q4.py  test_q5.py
(+26 files in other folders)
